--- a/src/pages/address/address.wxml
+++ b/src/pages/address/address.wxml
@@ -1,6 +1,6 @@
 <view class="app addrss">
 	<view class="app__inner">
-		<image src="../../image/tmh/10.png" class="company_img"></image>
+		<image src="http://mczaiyun.top/tmh/10.png" class="company_img"></image>
 		<view class="company_info">
 			<view class="row">
 				<text class="label">公司名称:</text>
