--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -17,38 +17,22 @@
 
 		天美汇鸡翅包饭官网以快乐健康为主打产品，天美汇鸡翅包饭秉承“健康、时尚、休闲、营养、快捷”的经营理念和“时尚小吃、个性生活”的品牌宗旨，天美汇鸡翅包饭并凭借个性的定位和独特的口感迎取了广大消费者。
 		总部地址：深圳市罗湖区东门中路华佳广场15楼1502-1503室
+		分公司地址：深圳市宝安区前进二路智汇创新中心D栋3A02
+		加盟咨询电话：
+		0755-27931117；
+		0755-23704731
 	</text>
-
-	<!--<text class="gywm">【关于创客宝-智慧新零售】</text>-->
-	<!--<text class="zw" >-->
-	<!--创客宝是基于互联网思维，专注以消费者和实体商家为中心(S2B2C)，提供线上线下大数据服务的智慧零售产业链平台。-->
-	<!--在“智慧零售”成为当今世界风口的背景下，创客宝将发挥其线上线下深度融合的优势，为实体商家提供精准营销服务，给消费者带来优质的服务体验。平台使命：让零售更智慧。-->
-	<!--1、创客：-->
-	<!--免费成为创客宝认证创客后，-->
-	<!--（1）直接在平台购物，确认收货后获得平台购物补贴（消费省钱）；-->
-	<!--（2）分享给他人下单并确认收货后，你将获得平台补贴（分享赚钱）；-->
-	<!--（3）通过分享推广二维码产生的创客团队下单并确认收货后，你将获得平台补贴（分享赚钱）；-->
-	<!--（4）补贴和创豆都是由系统自动发放到创客账户，创豆可用于购物抵扣，赚取的补贴可直接提现。-->
-	<!--2、智慧云铺商家-->
-	<!--全国各区县线下实体店商家均可加盟创客宝智慧云铺，从此开店不受时间、空间限制，通过创客宝进行精准营销、跨界收益。-->
-	<!--3、创客宝线下多码付-->
-	<!--解决商家收款变得更加便捷高效，一个二微码就可以解决所有支付方式（支持：信用卡、微信、支付宝、花呗、京东白条等）。消费者只需扫码支付即可变成商家会员。便于商家分析用户需求，今后提供精准拓客推广服务。-->
-	<!--</text>-->
-	<!--<text class="gywm" style="color: red">创客宝平台主营业务功能如下</text>-->
-
-	<!--<text class="last-modify">1.线上智慧云铺商城；</text>-->
-	<!--<text class="last-modify">2.线下多码付收款申请（银行审核）；</text>-->
-	<!--<text class="last-modify">3.费率最低（支持信用卡、微信、支付宝、蚂蚁花呗、京东白条、储值卡等支付工具）；</text>-->
-	<!--<text class="last-modify">4.消费者扫码付款即可成为商家会员（新人领取随机红包一个）；</text>-->
-	<!--<text class="last-modify">5.免费会员精准推送（平台己开通蜂鸟、达达配送）；</text>-->
-	<!--<text class="last-modify">6.定期活动奖励商家（消费者买单领取随机红包打折）；</text>-->
-	<!--<text class="last-modify">7.线上资金直接到商家微信或支付宝，线下多码付资金由银行监管（交易无账期）；</text>-->
-	<!--<text class="last-modify">8.消费者主动分享商家店铺即可获得商家打赏（智慧管理后台）；</text>-->
-	<!--<text class="last-modify">9.免费开通手机扫码枪功能收款对账更快捷（智能对账¥收款）；</text>-->
-	<!--<text class="last-modify" style="margin-bottom: 20px">10.商家免费使用广告及代金券投放（智能广告营销）；</text>-->
-	<!--<text class="last-modify" style="color: red" >【提供增值服务：免费帮商家申请营业执照；帮商家申请开通信用卡代还功能；】</text>-->
-
-	<!--<image src="http://mczaiyun.top/ckb/121.jpg" class="company_img"></image>-->
-
+	<text class="zw">
+		品牌文化:
+	</text>
+	<text>
+		天美汇鸡翅包饭是天美汇餐饮旗下品牌之一，创立于2015年初，经过2年多的不断发展和沉淀，天美汇鸡翅包饭在全国多个省市开设多家门店，公司坚持从源头制作到门店销售的每一个细节都严格把关，坚持顾客带来非凡的味觉体验与服务体验。公司始终相信，匠心出美味，真诚遇顾客。
+	</text>
+	<text>
+		品牌定位：
+	</text>
+	<image class="pp_img" src="http://mczaiyun.top/tmh/e6.jpg"></image>
+	<image class="pp_img" src="http://mczaiyun.top/tmh/e7.png"></image>
+	<image class="pp_img" src="http://mczaiyun.top/tmh/e8.png"></image>
 
 </view>
