--- a/src/pages/new-detail/new-detail.scss
+++ b/src/pages/new-detail/new-detail.scss
@@ -17,7 +17,21 @@
 	}
 	.news-image {
 		width: 100%;
-		min-height: 800px;
 		display: block;
+	}
+
+	.good_item{
+		margin: 10px;
+	}
+	.red-color{
+		display: block;
+		color: red;
+		margin: 4px;
+	}
+	.example3_img{
+		height: 800px;
+	}
+	.example4_img{
+		height: 1600px;
 	}
 }
