--- a/src/pages/phone/phone.wxml
+++ b/src/pages/phone/phone.wxml
@@ -6,17 +6,13 @@
 				<text class="label">公司名称:</text>
 				<text class="detail">{{companyName}}</text>
 			</view>
+			<!--<view class="row">-->
+				<!--<text class="label">客服:</text>-->
+				<!--<text class="detail">{{userName}}</text>-->
+			<!--</view>-->
 			<view class="row">
-				<text class="label">客服:</text>
-				<text class="detail">{{userName}}</text>
-			</view>
-			<view class="row">
-				<text class="label">财富热线:</text>
+				<text class="label">加盟热线:</text>
 				<text class="detail">{{phone}}</text>
-			</view>
-			<view class="row" style="margin-bottom: 10px">
-				<text class="label">邮箱:</text>
-				<text class="detail">{{email}}</text>
 			</view>
 			<button type="primary" bindtap="call" size="primary">拨打电话</button>
 		</view>
