优化小程序

--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -1,7 +1,7 @@
 <view class="app about_us">
 	<text class="gywm">关于我们</text>
 	<text class="zw">
-		【深圳市天美汇餐饮管理有限公司】
+		【深圳市天美汇鸡翅包饭管理有限公司】
 
 		天美汇成立于2006年,总部位于深圳市,是一个集食品研发,生产加工,包装配送,产品销售为一体的连锁企业.
 
@@ -16,11 +16,15 @@
 		天美汇鸡翅包饭加盟，诸多休闲美食，诸多休闲体验，给您带去回味无穷的享受，给您带去意想不到的感受!天美汇鸡翅包饭餐饮系列产品的问世，将助天美汇鸡翅包饭成为低碳餐饮的领跑者。
 
 		天美汇鸡翅包饭官网以快乐健康为主打产品，天美汇鸡翅包饭秉承“健康、时尚、休闲、营养、快捷”的经营理念和“时尚小吃、个性生活”的品牌宗旨，天美汇鸡翅包饭并凭借个性的定位和独特的口感迎取了广大消费者。
-		总部地址：深圳市罗湖区东门中路华佳广场15楼1502-1503室
-		分公司地址：深圳市宝安区前进二路智汇创新中心D栋3A02
+		<text class="green">总部地址：深圳市罗湖区东门中路华佳广场15楼1502-1503室
+		</text>
+		<text class="green">分公司地址：深圳市宝安区前进二路智汇创新中心D栋3A02</text>
 		加盟咨询电话：
-		0755-27931117；
-		0755-23704731
+		<text class="red">0755-27931117
+		</text>
+		<text class="red">0755-23704731
+		</text>
+		<text class="red">13570806050,汪小姐</text>
 	</text>
 	<text class="zw">
 		品牌文化:
