--- a/src/pages/company-news/company-news.wxml
+++ b/src/pages/company-news/company-news.wxml
@@ -1,9 +1,9 @@
 <view class="company-news">
 	<text class="gsdt">公司动态</text>
-	<view class="news-box" wx:for="{{newsArr}}"  data-id="{{item.id}}" bindtap="goHref" wx:key="index">
+	<view class="news-box" wx:for="{{newsArr}}" data-id="{{item.id}}" bindtap="goHref" wx:key="index">
 		<!--<image class="news_img" src="{{item.logo}}"></image>-->
 		<view class="news_wrap">
-			<text class="news_title">{{item.title}}</text>
+			<text style="color:{{item.color}};" class="news_title">{{item.title}}</text>
 		</view>
 	</view>
 </view>
