--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -46,8 +46,11 @@
 		</view>
 		<text class="panel-title">视频介绍</text>
 
+		<!--<tx-video vid="h05104lilww"></tx-video>-->
+		<!--<embed src="https://imgcache.qq.com/tencentvideo_v1/playerv3/TPout.swf?max_age=86400&v=20161117&vid=h05104lilww&auto=0" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>-->
+
 		<video class="myVideo"
-			   src="http://ugcydzd.qq.com/uwMRJfz-r5jAYaQXGdGnC2_ppdhgmrDlPaRvaV7F2Ic/h05104lilww.p712.1.mp4?sdtfrom=v1010&guid=625c23b1328d94c92102da0d02e6fca1&vkey=F7A25D76D7CA6CFEE5550DDAEE0C22DE3DF31A24C582514743F9D2AB625C8739FE3A49BC01E7502F4DF70059C8DF9886282D674ACFCDFB41D814B0F7A0B6426197156B7139AE25163868DB0A8D6EBB3C0EDE4E4D8173ABBFF51E105D8129C6A9B2B0E214C553FE7726F006F99693413722FF223BA356FAB2"
+			   src="http://ugcbsy.qq.com/uwMRJfz-r5jAYaQXGdGnC2_ppdhgmrDlPaRvaV7F2Ic/h05104lilww.p712.1.mp4?sdtfrom=v1010&guid=625c23b1328d94c92102da0d02e6fca1&vkey=E205997CC4EFA7209EB0AA434B2C8C7752F6B18646A4AB1DB9B50BDA444D3F30124C2717C933991757E437C29563ABEF56150A00FC7E5ADDA8B16564965D67A07AFA765EE4502E465D7F96A9DCBF898E72DA3FD10D464BCD304BCD911479E8E8E9BE9261BAB3E4229E5785E4471D03741F85D9893C2409FF"
 			   danmu-list="{{danmuList}}" enable-danmu danmu-btn controls></video>
 		<text class="panel-title gsdt">公司动态</text>
 
