--- a/src/pages/new-detail/new-detail.wxml
+++ b/src/pages/new-detail/new-detail.wxml
@@ -41,14 +41,14 @@
 			<text>台湾原茶与水果的碰撞
 				天美汇茶饮所选的茶叶全部来自台湾高山茶园，我们将台湾高山茶叶现煮现调，再配上新鲜水果，茶香与果香相互融合沁人心脾，飘香四溢，果味清爽，营养丰富。
 			</text>
-			<image src="../../image/product3_2.jpg"></image>
+			<image src="http://mczaiyun.top/tmh/product3_2.jpg"></image>
 		</view>
 		<view class="good_item">
 			<text class="red-color">经典奶茶</text>
 			<text>一口奶香，一口茶香
 				奶茶是奶与茶的交融，我们的茶底同样选用台湾高山茶，牛奶均选用上等鲜奶，香醇浓郁，丝丝润滑。
 			</text>
-			<image src="../../image/product3_3.jpg"></image>
+			<image src="http://mczaiyun.top/tmh/product3_3.jpg"></image>
 		</view>
 		<view class="good_item">
 			<text class="red-color">氧气饮品</text>
