--- a/src/pages/new-detail/new-detail.wxml
+++ b/src/pages/new-detail/new-detail.wxml
@@ -32,6 +32,7 @@
 			<text>
 				源于五十年代的香港，因其蛋的鲜香和奶的纯香的独特口感成为老少皆爱的健康美食。刚出炉的鸡蛋仔呈金黄色，有着可爱的葡萄形状，一口咬下去，外层香脆，上层中空，下层软绵夹心，吃完唇齿留香，给人不以言说的美味体验！
 			</text>
+			<image src="http://mczaiyun.top/tmh/food01.png"></image>
 		</view>
 	</view>
 
@@ -53,6 +54,7 @@
 		<view class="good_item">
 			<text class="red-color">氧气饮品</text>
 			<text>可乐、雪碧、冻柠饮品除了特调茶饮外，这三款也是鸡翅包饭的绝配。吃一口鸡翅包饭，当嘴角还留有一丝香辣味时，再喝一口碳酸饮料，那种酸爽、微甜、刺激舌尖的麻醉，顿时让全身都畅快。</text>
+			<image src="http://mczaiyun.top/tmh/product3_5.jpg"></image>
 		</view>
 	</view>
 
