--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -24,7 +24,9 @@
 		</text>
 		<text class="red">0755-23704731
 		</text>
-		<text class="red">13570806050,汪小姐</text>
+		<text class="red">13570806050（苏先生）</text>
+		<text class="red">13926578824（汪小姐）</text>
+
 	</text>
 	<text class="zw">
 		品牌文化:
