修改创客宝

--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -35,7 +35,14 @@
 		诚信正直的处事原则，遵守契约，忠诚服务客户
 		心怀感恩
 		积极的人生观，在工作中常怀感激之心
-		公司地址：深圳市宝安区智汇创新中心D栋3A02
+		<text style="color: red">公司地址：深圳市宝安区智汇创新中心D栋3A02
+		</text>
+		<text style="color: red">公司坐机：0755-23704731
+		</text>
+		<text style="color: red">手机：13570806050（汪小姐）
+		</text>
+		<text style="color: red">手机：13423888824（苏先生）
+		</text>
 	</text>
 	<text class="gywm">【关于创客宝-智慧新零售】</text>
 	<text class="zw" >
@@ -54,7 +61,7 @@
 	</text>
 	<text class="gywm" style="color: red">创客宝平台主营业务功能如下</text>
 
-	<text class="last-modify">1.线上智慧云铺商城；</text>
+	<text class="last-modify">1.线上智慧云铺商城(商家企业电子名片展示)；</text>
 	<text class="last-modify">2.线下多码付收款申请（银行审核）；</text>
 	<text class="last-modify">3.费率最低（支持信用卡、微信、支付宝、蚂蚁花呗、京东白条、储值卡等支付工具）；</text>
 	<text class="last-modify">4.消费者扫码付款即可成为商家会员（新人领取随机红包一个）；</text>
