--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -54,7 +54,7 @@
 		<view class="news-box" wx:for="{{newsArr}}" wx:key="index" data-id="{{item.id}}" bindtap="goHref">
 			<image class="news_img" src="{{item.logo}}"></image>
 			<view class="news_wrap">
-				<text class="news_title">{{item.title}}</text>
+				<text class="news_title" style="color:{{item.color}}">{{item.title}}</text>
 			</view>
 		</view>
 
