创客宝二次开发

--- a/src/pages/about-us/about-us.wxml
+++ b/src/pages/about-us/about-us.wxml
@@ -35,7 +35,9 @@
 		诚信正直的处事原则，遵守契约，忠诚服务客户
 		心怀感恩
 		积极的人生观，在工作中常怀感激之心
-		<text style="color: red">公司地址：深圳市宝安区智汇创新中心D栋3A02
+		<text style="color: red">总部地址：浙江省杭州市江干区九华路1号新禾联创公园13幢
+		</text>
+		<text style="color: red">深圳分公司地址：深圳市宝安区智汇创新中心D栋3A02
 		</text>
 		<text style="color: red">公司坐机：0755-23704731
 		</text>
